# CMPE255_Project

./: .gitignore  BERT+MLP_Model.ipynb  Project_EDA.ipynb  README.md  Test.csv  pyproject.toml  run_all_models.sbatch  train.py
Classical ML/: JT_model.ipynb  README.md
notebooks/: view.ipynb
