[project]
name = "255-final"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "wandb>=0.19.10",
]
